--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
-  "name": "Act-On external content v1.1.0",
-  "version": "1.0.2",
+  "name": "FWAct-On external content v2.0.0",  // Ook aanpassen in content.js
+  "version": "2.0.0",
   "web_accessible_resources": ["Headlinesicon.png", "Artikelengrooticon.png", "Agendaicon.png", "Artikelenkleinicon.png"],
   "content_scripts": [
     {
