--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
-  "name": "FWAct-On external content v2.0.1",  // Ook aanpassen in content.js
-  "version": "2.0.1",
+  "name": "FWAct-On external content v2.0.2",  // Ook aanpassen in content.js en version.txt
+  "version": "2.0.2",
   "web_accessible_resources": ["Headlinesicon.png", "Artikelengrooticon.png", "Agendaicon.png", "Artikelenkleinicon.png"],
   "content_scripts": [
     {
