--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,10 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "FWAct-On external content v3.0.0", // Ook aanpassen in content.js en version.txt
   "version": "3.0.0",
-  "web_accessible_resources": ["Headlinesicon.png", "Artikelengrooticon.png", "Agendaicon.png", "Artikelenkleinicon.png"],
+  "web_accessible_resources": [{
+    "resources": ["Headlinesicon.png", "Artikelengrooticon.png", "Agendaicon.png", "Artikelenkleinicon.png"]
+  }],
   "content_scripts": [
     {
       "matches": [
@@ -14,9 +16,10 @@
     }
   ],
   "background": {
-      "scripts": ["browser.js"]
+      "service_worker": "browser.js"
   },
-  "browser_action": {
+  "action": {
     "default_icon": "ActOnPlusIcon.png"
   }
 }
+
